proper walls
